# atlas

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  requirements.txt
.agent/: PLAN.md
.github/workflows/: publish.yml
core/: map.py  profiler.py  provisioner.py
docs/: info-spec.md  overview-spec.md
docs/superpowers/plans/: 2026-03-23-locus-tutor.md  2026-03-24-locus-improvements.md
docs/superpowers/specs/: 2026-03-23-locus-tutor-design.md  2026-03-24-locus-improvements-design.md
src/locus_cli/: main.py
src/locus_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/locus_cli/core/: extractor.py  inference.py  map.py  profiler.py  provisioner.py  scanner.py  tutor.py
src/locus_cli/ui/: app.py  console.py  info_renderer.py  overview_app.py  setup_app.py  tutor_app.py
tests/: test_extractor.py  test_inference.py  test_map.py  test_scanner.py  test_tree.py  test_tutor.py
ui/: app.py
