[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "locus-cli"
version = "0.1.0"
description = "Lightweight terminal app to quickly understand large codebases"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{name = "Mattia Rizzo"}]
keywords = ["cli", "tui", "llm", "codebase", "textual", "rich"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.70.0",
    "rich>=13.0.0",
    "psutil>=5.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.9",
    "types-psutil>=6.0",
]

[project.urls]
Homepage = "https://github.com/Tech-Matt/locus"
Repository = "https://github.com/Tech-Matt/locus"

[project.scripts]
locus = "locus_cli.main:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]

[tool.setuptools.package-data]
locus_cli = ["ui/*.tcss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]